// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
option java_package = "ohos.devtools.datasources.transport.grpc.service";
option optimize_for = LITE_RUNTIME;


message FpsData {
    enum ClockId {
        UNKNOW = 0;
        BOOTTIME = 1;
        REALTIME = 2;
        REALTIME_COARSE = 3;
        MONOTONIC = 4;
        MONOTONIC_COARSE = 5;
        MONOTONIC_RAW = 6;
    }
    ClockId id = 1;
    message TimeSpec {
        uint32 tv_sec = 1;
        uint32 tv_nsec = 2;
    };
    TimeSpec time = 2;
    uint32 fps = 3;
}

message HidumpInfo {
    repeated FpsData fps_event = 1;
}